Created completed appointment layout and recycler adapter

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,6 @@
 
     <!-- Ternary color -->
     <color name="ternary_color">#E3F2FD</color>
+    <color name="green">#6be585</color>
     <!-- Ternary color -->
 </resources>
