--- a/app/src/main/res/layout/canceled_appointments_list_item.xml
+++ b/app/src/main/res/layout/canceled_appointments_list_item.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:fontFamily="@font/poppins_bold"
-            android:text="Karma Mohamed"
+            android:text="Mohamed Ahmed"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -44,12 +44,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
             android:background="@drawable/custom_outline_rectangle_button"
-            android:fontFamily="@font/poppins_medium"
+            android:fontFamily="@font/poppins_regular"
             android:padding="5dp"
             android:text="Canceled"
             android:textColor="@android:color/holo_red_light"
-            app:layout_constraintStart_toStartOf="@+id/tv_doctor_name_canceled_appointments"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_doctor_name_canceled_appointments" />
 
         <View
