--- a/app/src/main/res/layout/new_patient_request_list_item.xml
+++ b/app/src/main/res/layout/new_patient_request_list_item.xml
@@ -112,7 +112,7 @@
             android:layout_marginBottom="8dp"
             android:background="@drawable/custom_outlined_button"
             android:fontFamily="@font/poppins_medium"
-            android:text="Cancel"
+            android:text="Decline"
             android:textAllCaps="false"
             android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -121,7 +121,7 @@
             app:layout_constraintTop_toBottomOf="@+id/img_calender_new_patient_icon" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_approve_new_patient"
+            android:id="@+id/btn_seeMore_new_patient"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -129,7 +129,7 @@
             android:layout_marginBottom="8dp"
             android:background="@drawable/custom_filled_rounded_button"
             android:fontFamily="@font/poppins_medium"
-            android:text="Approve"
+            android:text="See more"
             android:textAllCaps="false"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
