--- a/app/src/main/res/layout/fragment_upcoming_appointments.xml
+++ b/app/src/main/res/layout/fragment_upcoming_appointments.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -11,5 +12,17 @@
         android:layout_height="match_parent"
         tools:context=".ui.patient.appointments.upcoming.UpcomingAppointmentsFragment">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_upcoming_appointments"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.5"
+            tools:listitem="@layout/upcoming_appointments_list_item"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
