Created patient edit profile layout

--- a/app/src/main/res/navigation/patient_nav_graph.xml
+++ b/app/src/main/res/navigation/patient_nav_graph.xml
@@ -29,5 +29,14 @@
         android:id="@+id/patientProfileFragment"
         android:name="com.syncdev.shifaa.ui.patient.profile.PatientProfileFragment"
         android:label="fragment_patient_profile"
-        tools:layout="@layout/fragment_patient_profile" />
+        tools:layout="@layout/fragment_patient_profile" >
+        <action
+            android:id="@+id/action_patientProfileFragment_to_patientEditProfileFragment"
+            app:destination="@id/patientEditProfileFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/patientEditProfileFragment"
+        android:name="com.syncdev.shifaa.ui.patient.profile.edit_profile.PatientEditProfileFragment"
+        android:label="PatientEditProfileFragment"
+        tools:layout="@layout/fragment_patient_edit_profile"/>
 </navigation>
