--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -7,179 +7,18 @@
     android:fillViewport="true"
     tools:context=".ui.auth.login.SignInFragment">
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.auth.login.SignInFragment">
+        android:layout_height="wrap_content">
 
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_upper"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.15" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guildline_left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.2" />
-
-        <ImageView
-            android:id="@+id/iv_logo"
-            android:layout_width="121dp"
-            android:layout_height="113dp"
-            android:layout_marginTop="16dp"
-            android:src="@drawable/shifaa_logo"
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPager_signin"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guideline_upper" />
-
-        <TextView
-            android:id="@+id/tv_login_greetings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/poppins_bold"
-            android:text="@string/welcome_to_shefa_a"
-
-            android:textColor="@color/black"
-            android:textColorHint="@color/gray"
-            android:textSize="@dimen/sign_in_text_size_normal"
-            app:layout_constraintEnd_toEndOf="@+id/iv_logo"
-            app:layout_constraintStart_toStartOf="@+id/iv_logo"
-            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />
-
-
-        <TextView
-            android:id="@+id/tv_login_to_continue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_small"
-            android:fontFamily="@font/poppins_bold"
-            android:text="@string/login_to_continue"
-            android:textColor="@color/gray"
-            android:textSize="@dimen/sign_in_text_size_normal"
-            app:layout_constraintEnd_toEndOf="@+id/tv_login_greetings"
-            app:layout_constraintStart_toStartOf="@+id/tv_login_greetings"
-            app:layout_constraintTop_toBottomOf="@+id/tv_login_greetings" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/til_email"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/spacing_normal"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="@dimen/spacing_normal"
-            app:boxStrokeColor="@color/main_color"
-            app:hintTextColor="@color/main_color"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_login_to_continue">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/poppins_regular"
-                android:hint="@string/email_address_hint"
-                android:maxLines="1"
-                android:textColor="@color/black"
-                android:textColorHint="@color/gray"
-                android:textSize="@dimen/sign_in_text_size_normal" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/til_password"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/spacing_normal"
-            android:layout_marginTop="@dimen/spacing_normal"
-            android:layout_marginEnd="@dimen/spacing_normal"
-            app:boxStrokeColor="@color/main_color"
-            app:endIconMode="password_toggle"
-            app:endIconTint="@color/main_color"
-            app:hintTextColor="@color/main_color"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/til_email">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/poppins_regular"
-                android:hint="@string/password_hint"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:textColor="@color/black"
-                android:textColorHint="@color/gray"
-                android:textSize="@dimen/sign_in_text_size_normal" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <Button
-            android:id="@+id/btn_signin"
-            style="@style/button_main_style"
-            android:text="@string/sign_in"
-            app:cornerRadius="5dp"
-            app:layout_constraintEnd_toEndOf="@+id/til_password"
-            app:layout_constraintStart_toStartOf="@+id/til_password"
-            app:layout_constraintTop_toBottomOf="@+id/til_password" />
-
-        <TextView
-            android:id="@+id/tv_dont_have_acc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:fontFamily="@font/poppins_bold"
-            android:text="@string/don_t_have_account"
-            android:textColor="@color/gray"
-            android:textSize="@dimen/sign_in_text_size_normal"
-            app:layout_constraintStart_toStartOf="@+id/guildline_left"
-            app:layout_constraintTop_toBottomOf="@+id/btn_signin" />
-
-        <TextView
-            android:id="@+id/tv_register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/spacing_small"
-            android:fontFamily="@font/poppins_bold"
-            android:text="@string/register"
-            android:textColor="@color/main_color"
-            android:textSize="@dimen/sign_in_text_size_normal"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_dont_have_acc"
-            app:layout_constraintStart_toEndOf="@+id/tv_dont_have_acc"
-            app:layout_constraintTop_toTopOf="@+id/tv_dont_have_acc"
-            app:layout_constraintVertical_bias="0.0" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_normal"
-            android:fontFamily="@font/poppins_bold"
-            android:text="@string/forgot_password"
-            android:textColor="@color/gray"
-            android:textSize="@dimen/sign_in_text_size_normal"
-            app:layout_constraintStart_toStartOf="@+id/tv_dont_have_acc"
-            app:layout_constraintTop_toBottomOf="@+id/tv_dont_have_acc" />
-
-        <TextView
-            android:id="@+id/tv_reset_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/spacing_small"
-            android:fontFamily="@font/poppins_bold"
-            android:text="@string/reset"
-            android:textColor="@color/main_color"
-            android:textSize="@dimen/sign_in_text_size_normal"
-            app:layout_constraintBottom_toBottomOf="@+id/textView5"
-            app:layout_constraintStart_toEndOf="@+id/textView5"
-            app:layout_constraintTop_toTopOf="@+id/textView5" />
-
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
