Created register and login viewmodels for the doctor and done testing its functionality

--- a/app/src/main/res/layout/fragment_sign_up_patient.xml
+++ b/app/src/main/res/layout/fragment_sign_up_patient.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".ui.auth.register.SignUpPatientFragment">
+    tools:context=".ui.auth.register.patient.SignUpPatientFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
