--- a/app/src/main/res/layout/fragment_doctor_sign_in.xml
+++ b/app/src/main/res/layout/fragment_doctor_sign_in.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.syncdev.shifaa.ui.auth.login.doctor.DoctorSignInViewModel" />
     </data>
 
     <ScrollView
@@ -91,6 +94,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_regular"
                     android:hint="@string/email_address_hint"
+                    android:text="@={viewModel.email}"
                     android:maxLines="1"
                     android:textColor="@color/black"
                     android:textColorHint="@color/gray"
@@ -121,6 +125,7 @@
                     android:hint="@string/password_hint"
                     android:inputType="textPassword"
                     android:maxLines="1"
+                    android:text="@={viewModel.password}"
                     android:textColor="@color/black"
                     android:textColorHint="@color/gray"
                     android:textSize="@dimen/sign_in_text_size_normal" />
