--- a/app/src/main/res/layout/fragment_sign_up_doctor.xml
+++ b/app/src/main/res/layout/fragment_sign_up_doctor.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".ui.auth.register.SignUpDoctorFragment">
+    tools:context=".ui.auth.register.doctor.SignUpDoctorFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
