Implemented the way to select the OTP method and modified the nav graph

--- a/app/src/main/res/navigation/auth_nav_graph.xml
+++ b/app/src/main/res/navigation/auth_nav_graph.xml
@@ -86,6 +86,9 @@
             app:popExitAnim="@anim/to_right"
             app:popUpTo="@id/signInFragment"
             app:popUpToInclusive="true" />
+        <argument
+            android:name="otpMethod"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/resetPasswordFragment"
