--- a/app/src/main/res/layout/fragment_forget_password.xml
+++ b/app/src/main/res/layout/fragment_forget_password.xml
@@ -66,13 +66,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/img_reset_password" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView"
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/cardView_phone"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_margin="@dimen/spacing_normal"
             app:cardCornerRadius="15dp"
             app:cardElevation="3dp"
+            android:checkable="true"
             app:cardUseCompatPadding="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -118,19 +119,21 @@
                     app:layout_constraintStart_toStartOf="@+id/tv_via_sms"
                     app:layout_constraintTop_toBottomOf="@+id/tv_via_sms" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView2"
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/cardView_email"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_margin="@dimen/spacing_normal"
             app:cardCornerRadius="15dp"
             app:cardElevation="3dp"
+            android:checkable="true"
+            app:strokeColor="@color/cardview_stroke_color"
             app:cardUseCompatPadding="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardView">
+            app:layout_constraintTop_toBottomOf="@+id/cardView_phone">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -172,7 +175,7 @@
                     app:layout_constraintStart_toStartOf="@+id/tv_via_email"
                     app:layout_constraintTop_toBottomOf="@+id/tv_via_email" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
 
         <Button
             android:id="@+id/btn_continue"
@@ -182,7 +185,7 @@
             android:text="@string/Continue"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+            app:layout_constraintTop_toBottomOf="@+id/cardView_email" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
