--- a/app/src/main/res/navigation/auth_nav_graph.xml
+++ b/app/src/main/res/navigation/auth_nav_graph.xml
@@ -9,7 +9,7 @@
         android:id="@+id/splashFragment"
         android:name="com.syncdev.shifaa.ui.auth.splash.SplashFragment"
         android:label="fragment_splash"
-        tools:layout="@layout/fragment_splash" >
+        tools:layout="@layout/fragment_splash">
         <action
             android:id="@+id/action_splashFragment_to_viewPagerFragment"
             app:destination="@id/viewPagerFragment"
@@ -25,7 +25,7 @@
         android:id="@+id/viewPagerFragment"
         android:name="com.syncdev.shifaa.ui.auth.onboarding.ViewPagerFragment"
         android:label="fragment_view_pager"
-        tools:layout="@layout/fragment_view_pager" >
+        tools:layout="@layout/fragment_view_pager">
         <action
             android:id="@+id/action_viewPagerFragment_to_signInFragment"
             app:destination="@id/signInFragment"
@@ -36,14 +36,18 @@
         android:id="@+id/signInFragment"
         android:name="com.syncdev.shifaa.ui.auth.login.SignInFragment"
         android:label="fragment_sign_in"
-        tools:layout="@layout/fragment_sign_in" >
+        tools:layout="@layout/fragment_sign_in">
         <action
             android:id="@+id/action_signInFragment_to_forgetPasswordFragment"
             app:destination="@id/forgetPasswordFragment"
             app:enterAnim="@anim/from_right"
             app:exitAnim="@anim/to_left"
             app:popEnterAnim="@anim/from_left"
-            app:popExitAnim="@anim/to_right" />
+            app:popExitAnim="@anim/to_right">
+            <argument
+                android:name="role"
+                app:argType="string" />
+        </action>
         <action
             android:id="@+id/action_signInFragment_to_signUpPatientFragment"
             app:destination="@id/signUpPatientFragment"
@@ -63,20 +67,23 @@
         android:id="@+id/forgetPasswordFragment"
         android:name="com.syncdev.shifaa.ui.auth.forget_password.ForgetPasswordFragment"
         android:label="fragment_forget_password"
-        tools:layout="@layout/fragment_forget_password" >
+        tools:layout="@layout/fragment_forget_password">
         <action
-            android:id="@+id/action_forgetPasswordFragment_to_otpVerificationFragment"
-            app:destination="@id/otpVerificationFragment"
-            app:enterAnim="@anim/from_right"
-            app:exitAnim="@anim/to_left"
-            app:popEnterAnim="@anim/from_left"
-            app:popExitAnim="@anim/to_right" />
+            android:id="@+id/action_forgetPasswordFragment_to_sendOtpFragment"
+            app:destination="@id/sendOtpFragment">
+            <argument
+                android:name="role"
+                app:argType="string" />
+            <argument
+                android:name="otpMethod"
+                app:argType="string" />
+        </action>
     </fragment>
     <fragment
         android:id="@+id/otpVerificationFragment"
         android:name="com.syncdev.shifaa.ui.auth.forget_password.OtpVerificationFragment"
         android:label="fragment_otp_verification"
-        tools:layout="@layout/fragment_otp_verification" >
+        tools:layout="@layout/fragment_otp_verification">
         <action
             android:id="@+id/action_otpVerificationFragment_to_resetPasswordFragment"
             app:destination="@id/resetPasswordFragment"
@@ -86,15 +93,12 @@
             app:popExitAnim="@anim/to_right"
             app:popUpTo="@id/signInFragment"
             app:popUpToInclusive="true" />
-        <argument
-            android:name="otpMethod"
-            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/resetPasswordFragment"
         android:name="com.syncdev.shifaa.ui.auth.forget_password.ResetPasswordFragment"
         android:label="fragment_reset_password"
-        tools:layout="@layout/fragment_reset_password" >
+        tools:layout="@layout/fragment_reset_password">
         <action
             android:id="@+id/action_resetPasswordFragment_to_signInFragment"
             app:destination="@id/signInFragment"
@@ -109,7 +113,7 @@
         android:id="@+id/signUpPatientFragment"
         android:name="com.syncdev.shifaa.ui.auth.register.patient.SignUpPatientFragment"
         android:label="fragment_sign_up_patient"
-        tools:layout="@layout/fragment_sign_up_patient" >
+        tools:layout="@layout/fragment_sign_up_patient">
         <action
             android:id="@+id/action_signUpPatientFragment_to_signInFragment"
             app:destination="@id/signInFragment"
@@ -124,7 +128,7 @@
         android:id="@+id/signUpDoctorFragment"
         android:name="com.syncdev.shifaa.ui.auth.register.doctor.SignUpDoctorFragment"
         android:label="fragment_sign_up_doctor"
-        tools:layout="@layout/fragment_sign_up_doctor" >
+        tools:layout="@layout/fragment_sign_up_doctor">
         <action
             android:id="@+id/action_signUpDoctorFragment_to_signInFragment"
             app:destination="@id/signInFragment"
@@ -134,5 +138,14 @@
             app:popExitAnim="@anim/to_left"
             app:popUpTo="@id/signInFragment"
             app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/sendOtpFragment"
+        android:name="com.syncdev.shifaa.ui.auth.forget_password.SendOtpFragment"
+        android:label="SendOtpFragment"
+        tools:layout="@layout/fragment_send_otp">
+        <action
+            android:id="@+id/action_sendOtpFragment_to_otpVerificationFragment"
+            app:destination="@id/otpVerificationFragment" />
     </fragment>
 </navigation>
