Implemented the validation for the patient registeration and validation for both doctor and patient logging in

--- a/app/src/main/res/layout/fragment_sign_up_doctor.xml
+++ b/app/src/main/res/layout/fragment_sign_up_doctor.xml
@@ -116,6 +116,7 @@
                             android:fontFamily="@font/poppins_medium"
                             android:hint="@string/first_name"
                             android:maxLines="1"
+                            android:maxLength="20"
                             android:text="@={viewModel.firstName}"
                             android:textColor="@color/black"
                             android:textColorHint="@color/gray"
@@ -143,6 +144,7 @@
                             android:fontFamily="@font/poppins_medium"
                             android:hint="@string/last_name"
                             android:maxLines="1"
+                            android:maxLength="20"
                             android:text="@={viewModel.lastName}"
                             android:textColor="@color/black"
                             android:textColorHint="@color/gray"
@@ -349,6 +351,8 @@
                             android:fontFamily="@font/poppins_regular"
                             android:hint="@string/hint_password"
                             android:inputType="textPassword"
+                            android:maxLines="1"
+                            android:maxLength="16"
                             android:text="@={viewModel.password}"
                             android:textColorHint="@color/gray"
                             android:textSize="@dimen/text_size_small" />
@@ -389,6 +393,8 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/poppins_regular"
                             android:hint="@string/hint_password"
+                            android:maxLines="1"
+                            android:maxLength="16"
                             android:inputType="textPassword"
                             android:textColor="@color/black"
                             android:text="@={viewModel.confirmPassword}"
