--- a/app/src/main/res/layout/fragment_doctor_sign_in.xml
+++ b/app/src/main/res/layout/fragment_doctor_sign_in.xml
@@ -125,6 +125,7 @@
                     android:hint="@string/password_hint"
                     android:inputType="textPassword"
                     android:maxLines="1"
+                    android:maxLength="16"
                     android:text="@={viewModel.password}"
                     android:textColor="@color/black"
                     android:textColorHint="@color/gray"
