Done with the sign out logic and finished everything about authentication

--- a/app/src/main/res/layout/fragment_patient_profile.xml
+++ b/app/src/main/res/layout/fragment_patient_profile.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="viewModel"
+            type="com.syncdev.shifaa.ui.patient.profile.PatientProfileViewModel" />
     </data>
 
     <ScrollView
@@ -60,7 +62,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/poppins_bold"
-                android:text="Mahmoud Reda"
+                android:text="@{viewModel.fullName}"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -74,7 +76,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/poppins_regular"
-                android:text="+01111698412"
+                android:text="@{viewModel.patient.phoneNumber}"
+                android:hint="+201065475412"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
